--- a/app/src/main/res/layout/nav_bottom_my.xml
+++ b/app/src/main/res/layout/nav_bottom_my.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="这里是通讯录"
+        android:text="这里是我的"
         android:layout_centerVertical="true"
         android:textColor="#000000"
         android:textSize="40sp"
