--- a/app/src/main/res/layout/activity_weixin.xml
+++ b/app/src/main/res/layout/activity_weixin.xml
@@ -7,31 +7,31 @@
     android:fitsSystemWindows="true"
     tools:context=".activity.tool.WeixinActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_weixin"
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" >
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-            <RelativeLayout
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar_weixin"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
-                <Button
-                    android:id="@+id/toolbar_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="Button"/>
-            </RelativeLayout>
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                android:theme="@style/AppTheme.AppBarOverlay"
+                app:popupTheme="@style/AppTheme.PopupOverlay" >
 
-        </android.support.v7.widget.Toolbar>
+            </android.support.v7.widget.Toolbar>
 
-    </android.support.design.widget.AppBarLayout>
+        </android.support.design.widget.AppBarLayout>
+
+        <include layout="@layout/activity_weixin_content" />
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
